# python-weatherapi-wrapper

./: example.py  pyproject.toml  setup.py
tests/: test_api_caller.py  test_endpoint_methods.py  test_helpers.py  test_parser.py
weatherapi/: __init__.py  constants.py  endpoint_methods.py  helpers.py  logger.py
weatherapi/web_api/: interface.py  parser.py
