[tool.poetry]
name = "python-weatherapi-wrapper"
version = "0.1.0"
description = ""
authors = ["Jozef Tkocz"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
